--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
   <div class="card">
-    <div class="card-image"></div>
+    <!-- <div class="card-image"></div> -->
+    <img src="./images/image-product-mobile.jpg" class="card-image mobile" alt="">
+    <img src="./images/image-product-desktop.jpg" alt="" class="card-image desktop">
     <div class="card-content">
       <p class="card-title">Perfume</p>
       <h1 class="card-product-name">Gabrielle Essence Eau De Parfum</h1>
@@ -19,7 +21,7 @@
         <span class="card-main-price">R$149,99</span>
         <span class="card-muted-price">R$169,99</span>
       </div>
-      <button class="card-buy"><img src="./images/icon-cart.svg" alt="" srcset=""> Adicionar ao Carrinho</button>
+      <button class="card-buy"><img src="./images/icon-cart.svg" alt="" srcset=""> <span class="button-text">Adicionar ao Carrinho</span></button>
     </div>
   </div>
   
